<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:theme="@style/Theme.GestureNavigation.MaterialYou"
	tools:context=".MainActivity">
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="12dp"
		android:layout_marginBottom="12dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/topBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			android:text="@string/app_name"
			android:textSize="?attr/textSizeBig"
			android:layout_gravity="center"
			android:gravity="center"
			android:textStyle="bold"/>
		
		<androidx.core.widget.NestedScrollView
			android:id="@+id/main_scrollview"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/topBar"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="12dp"
			android:overScrollMode="never">
			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/main_contetnt_list"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8dp"
				android:paddingEnd="8dp"
				android:paddingBottom="8dp"
				android:paddingStart="8dp"
				android:orientation="vertical">
				<androidx.appcompat.widget.LinearLayoutCompat
					android:id="@+id/main_issues_popups_notifier"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_gravity="center_vertical|fill_horizontal"
					android:gravity="center_vertical|fill_horizontal"
					android:backgroundTint="?attr/colorSurfaceContainer"
					android:background="@drawable/rounded_container"
					android:paddingTop="8dp"
					android:paddingEnd="8dp"
					android:paddingBottom="8dp"
					android:paddingStart="8dp"
					android:layout_marginStart="12dp"
					android:layout_marginEnd="12dp">
					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:importantForAccessibility="no"
						app:tint="?attr/colorOnErrorContainer"
						android:src="@drawable/ic_info_twotone"/>
					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="?attr/textSizeSmall"
						android:text="@string/main_missingperms_summary_text"
						android:textColor="?attr/colorOnErrorContainer"
						android:textStyle="bold"
						android:textAlignment="center"/>
				</androidx.appcompat.widget.LinearLayoutCompat>
				<androidx.appcompat.widget.LinearLayoutCompat
					android:id="@+id/main_noissues_popups_notifier"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_gravity="center_vertical|fill_horizontal"
					android:gravity="center_vertical|fill_horizontal"
					android:backgroundTint="?attr/colorSurfaceContainer"
					android:background="@drawable/rounded_container"
					android:paddingTop="8dp"
					android:paddingEnd="8dp"
					android:paddingBottom="8dp"
					android:paddingStart="8dp"
					android:layout_marginStart="12dp"
					android:layout_marginEnd="12dp">
					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:importantForAccessibility="no"
						app:tint="?attr/colorOnSurface"
						android:src="@drawable/ic_info_twotone"/>
					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="2"
						android:textSize="?attr/textSizeSmall"
						android:text="@string/main_allgood_summary_text"
						android:textColor="?attr/colorOnSurface"
						android:textStyle="bold"
						android:textAlignment="center"/>
					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/main_allgood_displaybar_button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/button_background"
						android:backgroundTint="?attr/colorPrimary"
						android:textColor="?attr/colorOnPrimary"
						android:text="@string/main_allgood_summary_text_button"
						android:textAllCaps="false"
						android:textSize="?attr/textSizeSmall"/>
				</androidx.appcompat.widget.LinearLayoutCompat>
				<androidx.appcompat.widget.LinearLayoutCompat
					android:id="@+id/accessibility_grant_popup"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingTop="16dp"
					android:paddingEnd="16dp"
					android:paddingBottom="16dp"
					android:paddingStart="16dp"
					android:layout_marginStart="12dp"
					android:layout_marginEnd="12dp"
					android:layout_marginTop="16dp"
					android:backgroundTint="?attr/colorSurfaceContainer"
					android:background="@drawable/rounded_container">
					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="?attr/textSizeMedium"
						android:text="@string/main_missingperms_accessibility"
						android:textColor="?attr/colorOnErrorContainer"
						android:textStyle="bold"/>
					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="?attr/textSizeSmall"
						android:text="@string/main_missingperms_accessibility_description"
						android:textColor="?attr/colorOnErrorContainer"/>
					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/accessibility_grant_popup_button"
						android:layout_gravity="center"
						android:layout_marginTop="18dp"
						android:paddingStart="16dp"
						android:paddingEnd="16dp"
						android:layout_marginBottom="6dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/button_background"
						android:backgroundTint="?attr/colorError"
						android:textColor="?attr/colorOnError"
						android:text="@string/main_missingperms_accessibility_button"
						android:textAllCaps="false"
						android:textSize="?attr/textSizeSmall"/>
				</androidx.appcompat.widget.LinearLayoutCompat>
				<androidx.appcompat.widget.LinearLayoutCompat
					android:id="@+id/navigation_wrong_popup"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingTop="16dp"
					android:paddingEnd="16dp"
					android:paddingBottom="16dp"
					android:paddingStart="16dp"
					android:layout_marginStart="12dp"
					android:layout_marginEnd="12dp"
					android:layout_marginTop="16dp"
					android:backgroundTint="?attr/colorSurfaceContainer"
					android:background="@drawable/rounded_container">
					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="?attr/textSizeMedium"
						android:text="@string/main_missingperms_navigation"
						android:textColor="?attr/colorOnErrorContainer"
						android:textStyle="bold"/>
					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="?attr/textSizeSmall"
						android:text="@string/main_missingperms_navigation_description"
						android:textColor="?attr/colorOnErrorContainer"/>
					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/navigation_wrong_popup_button"
						android:layout_gravity="center"
						android:layout_marginTop="18dp"
						android:paddingStart="16dp"
						android:paddingEnd="16dp"
						android:layout_marginBottom="6dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/button_background"
						android:backgroundTint="?attr/colorError"
						android:textColor="?attr/colorErrorContainer"
						android:text="@string/main_missingperms_navigation_button"
						android:textAllCaps="false"
						android:textSize="?attr/textSizeSmall"/>
				</androidx.appcompat.widget.LinearLayoutCompat>
				<androidx.appcompat.widget.LinearLayoutCompat
					android:id="@+id/navigation_batteryopotimize_popup"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingTop="16dp"
					android:paddingEnd="16dp"
					android:paddingBottom="16dp"
					android:paddingStart="16dp"
					android:layout_marginStart="12dp"
					android:layout_marginEnd="12dp"
					android:layout_marginTop="16dp"
					android:backgroundTint="?attr/colorSurfaceContainer"
					android:background="@drawable/rounded_container">
					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="?attr/textSizeMedium"
						android:text="@string/main_missingperms_battery"
						android:textColor="?attr/colorOnErrorContainer"
						android:textStyle="bold"/>
					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="?attr/textSizeSmall"
						android:text="@string/main_missingperms_battery_description"
						android:textColor="?attr/colorOnErrorContainer"/>
					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="?attr/textSizeHint"
						android:textStyle="bold"
						android:text="@string/main_missingperms_not_mandatory_title"
						android:textColor="?attr/colorOnErrorContainer"/>
					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/battery_unoptimal_button"
						android:layout_gravity="center"
						android:layout_marginTop="18dp"
						android:paddingStart="16dp"
						android:paddingEnd="16dp"
						android:layout_marginBottom="6dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/button_background"
						android:backgroundTint="?attr/colorError"
						android:textColor="?attr/colorErrorContainer"
						android:text="@string/main_missingperms_battery_button"
						android:textAllCaps="false"
						android:textSize="?attr/textSizeSmall"/>
				</androidx.appcompat.widget.LinearLayoutCompat>
				
				
				
				
				<!--Debug Views-->
				<androidx.appcompat.widget.AppCompatButton
					android:visibility="gone"
					android:id="@+id/testing"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/button_background"
					android:backgroundTint="?attr/colorPrimaryContainer"
					android:textColor="?attr/colorOnPrimaryContainer"
					android:text="@string/main_allgood_summary_text_button"
					android:textAllCaps="false"
					android:textSize="?attr/textSizeSmall"/>
			</androidx.appcompat.widget.LinearLayoutCompat>
		</androidx.core.widget.NestedScrollView>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>